--- a/tournaments/yogapants.html
+++ b/tournaments/yogapants.html
@@ -222,12 +222,12 @@
                     <div class="round quarterfinals current">
                         <div class="round-details">Quarterfinals<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5jz" target="_blank">Jennifer Lawrence<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5jz" target="_blank">Jennifer Lawrence<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5jz" target="_blank">Madelaine Petsch<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5fh" target="_blank">Hilary Duff<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5fh" target="_blank">Emmy Rossum<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5fh" target="_blank">Emmy Rossum<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -235,23 +235,23 @@
                     <div class="semis-l current">
                         <div class="round-details">Semifinals 1 <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsml" target="_blank">Madelaine Petsch<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsml" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="final current">
                         <i class="fa fa-trophy"></i>
                         <div class="round-details">Grand Finale <br /></div>
                         <ul class="matchup championship">
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
                             <li class="team team-top round-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="semis-r current">
                         <div class="round-details">Semifinals 2 <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsst" target="_blank">Hilary Duff<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsst" target="_blank">Minka Kelly<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -260,10 +260,10 @@
                         <div class="round-details">Quarterfinals<br /></div>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5a3" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5a3" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5a3" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5nv" target="_blank">Jennifer Lopez<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5nv" target="_blank">Jennifer Lopez<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5nv" target="_blank">Minka Kelly<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
