--- a/tournaments/yogapants.html
+++ b/tournaments/yogapants.html
@@ -235,7 +235,7 @@
                     <div class="semis-l current">
                         <div class="round-details">Semifinals 1 <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsml" target="_blank">Madelaine Petsch<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsml" target="_blank">Madelaine Petsch<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsml" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
@@ -243,15 +243,15 @@
                         <i class="fa fa-trophy"></i>
                         <div class="round-details">Grand Finale <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top round-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/roz4sm/best_butt_in_yoga_pants_grand_finale_emma_stone/" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/roz4sm/best_butt_in_yoga_pants_grand_finale_emma_stone/" target="_blank">Hilary Duff<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="semis-r current">
                         <div class="round-details">Semifinals 2 <br /></div>
                         <ul class="matchup championship">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsst" target="_blank">Hilary Duff<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsst" target="_blank">Minka Kelly<span class="score">&nbsp;</span></a></li>
+                            <li class="team loser-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsst" target="_blank">Minka Kelly<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                 </div>
