--- a/tournaments/yogapants.html
+++ b/tournaments/yogapants.html
@@ -251,7 +251,7 @@
                         <div class="round-details">Semifinals 2 <br /></div>
                         <ul class="matchup championship">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsst" target="_blank">Hilary Duff<span class="score">&nbsp;</span></a></li>
-                            <li class="team loser-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsst" target="_blank">Minka Kelly<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rmxsst" target="_blank">Minka Kelly<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                 </div>
