--- a/tournaments/yogapants.html
+++ b/tournaments/yogapants.html
@@ -243,8 +243,8 @@
                         <i class="fa fa-trophy"></i>
                         <div class="round-details">Grand Finale <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/roz4sm/best_butt_in_yoga_pants_grand_finale_emma_stone/" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/roz4sm/best_butt_in_yoga_pants_grand_finale_emma_stone/" target="_blank">Hilary Duff<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/roz4sm/best_butt_in_yoga_pants_grand_finale_emma_stone/" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top round-details"><a href="https://www.reddit.com/r/CelebBattles/comments/roz4sm/best_butt_in_yoga_pants_grand_finale_emma_stone/" target="_blank">Hilary Duff<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="semis-r current">
