--- a/tournaments/teambattles.html
+++ b/tournaments/teambattles.html
@@ -74,10 +74,10 @@
     </section>
     <div class="container">
       <div>
-        <p class="info">Twenty unqiue teams composed of various celebrities will battle against each other to decide which team has the hottest celebs. The teams were chosen by the users of the subreddit in a <a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rrxvlu/nominations_for_the_next_tournament_team_battles/">nomination thread</a>.</p>
+        <p class="info">Twenty unqiue teams composed of various celebrities will battle against each other to decide which team has the hottest celebs. The teams were chosen by the users of the subreddit in a <a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rrxvlu/nominations_for_the_next_tournament_team_battles/">nomination thread</a></p>
       </div>
-
       <div class="info">TEAMS - <a class="info-link" href="https://celebbattles.github.io/tournaments/teambattles/teams">/teambattles/teams</a></div>
+      <div class="info">GROUP STAGE BATTLES - <a class="info-link" href="https://celebbattles.github.io/tournaments/teambattles/group">/teambattles/group</a></div>
     </div>
 
     <br>
@@ -193,7 +193,7 @@
                 <td>0</td>
               </tr>
               <tr>
-                <td>Red Heads</td>
+                <td>Team Red Heads</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
