--- a/tournaments/teambattles.html
+++ b/tournaments/teambattles.html
@@ -52,6 +52,7 @@
               <li><a href="https://celebbattles.github.io/tournaments/wc2021">Celeb World Cup 2021</a></li>
               <li><a href="https://celebbattles.github.io/tournaments/underrated">Hottest Underrated Celeb</a></li>
               <li><a href="https://celebbattles.github.io/tournaments/yogapants">Best Butt in Yoga Pants</a></li>
+              <li><a href="https://celebbattles.github.io/tournaments/teambattles">Team Battles</a></li>
             </ul>
           </li>
         </ul>
@@ -74,7 +75,7 @@
     </section>
     <div class="container">
       <div>
-        <p class="info">Twenty unqiue teams composed of various celebrities will battle against each other to decide which team has the hottest celebs. The teams were chosen by the users of the subreddit in a <a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rrxvlu/nominations_for_the_next_tournament_team_battles/">nomination thread</a></p>
+        <p class="info">Twenty unqiue teams composed of various celebrities will battle against each other to decide which team has the hottest celebs. The teams were chosen by the users of the subreddit in a <a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rsbcdz/nominations_for_the_next_tournament_team_battles/">nomination thread</a></p>
       </div>
       <div class="info">TEAMS - <a class="info-link" href="https://celebbattles.github.io/tournaments/teambattles/teams">/teambattles/teams</a></div>
       <div class="info">GROUP STAGE BATTLES - <a class="info-link" href="https://celebbattles.github.io/tournaments/teambattles/group">/teambattles/group</a></div>
