open in new tab

--- a/tournaments/teambattles.html
+++ b/tournaments/teambattles.html
@@ -77,8 +77,8 @@
       <div>
         <p class="info">Twenty unqiue teams composed of various celebrities will battle against each other to decide which team has the hottest celebs. The teams were chosen by the users of the subreddit in a <a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rsbcdz/nominations_for_the_next_tournament_team_battles/">nomination thread</a></p>
       </div>
-      <div class="info">TEAMS - <a class="info-link" href="https://celebbattles.github.io/tournaments/teambattles/teams">/teambattles/teams</a></div>
-      <div class="info">GROUP STAGE BATTLES - <a class="info-link" href="https://celebbattles.github.io/tournaments/teambattles/group">/teambattles/group</a></div>
+      <div class="info">TEAMS - <a class="info-link" href="https://celebbattles.github.io/tournaments/teambattles/teams" target="_blank">/teambattles/teams</a></div>
+      <div class="info">GROUP STAGE BATTLES - <a class="info-link" href="https://celebbattles.github.io/tournaments/teambattles/group" target="_blank">/teambattles/group</a></div>
     </div>
 
     <br>
