--- a/tournaments/teambattles/teams.html
+++ b/tournaments/teambattles/teams.html
@@ -24,7 +24,7 @@
     <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <!-- Template Main CSS File -->
-    <link href="teambattles.css" rel="stylesheet">
+    <link href="../teambattles.css" rel="stylesheet">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 
