--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -91,25 +91,25 @@
                             <tr>
                                 <td>1</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bust vs Team Eyes</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rtodho" target="_blank">Team Bust vs Team Eyes</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>1</td>
                                 <td>B</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Marvel vs Team Red Heads</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rtodho" target="_blank">Team Marvel vs Team Red Heads</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>1</td>
                                 <td>C</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Baby Face vs Team Petite</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rtodho" target="_blank">Team Baby Face vs Team Petite</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>1</td>
                                 <td>D</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bond Girls vs Team Scott Pilgrim v the World</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rtodho" target="_blank">Team Bond Girls vs Team Scott Pilgrim v the World</a></td>
                                 <td></td>
                             </tr>
                             <tr>
