--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -115,7 +115,7 @@
                             <tr>
                                 <td>2</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bellas vs Team Eyes</a></td>
+                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bellas vs Pop Princesses</a></td>
                                 <td></td>
                             </tr>
                             <tr>
