--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -211,7 +211,7 @@
                             <tr>
                                 <td>6</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bust vs Team Eyes</a></td>
+                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bellas vs Team Eyes</a></td>
                                 <td></td>
                             </tr>
                             <tr>
@@ -259,7 +259,7 @@
                             <tr>
                                 <td>8</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bellas vs Pop Princesses</a></td>
+                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bust vs Pop Princesses</a></td>
                                 <td></td>
                             </tr>
                             <tr>
