--- a/tournaments/teambattles.html
+++ b/tournaments/teambattles.html
@@ -104,25 +104,25 @@
             </thead>
             <tbody>
               <tr>
+                <td>Team Eyes</td>
+                <td>1</td>
+                <td>1</td>
+                <td>0</td>
+                <td>0</td>
+                <td>3</td>
+                <td>0.59</td>
+              </tr>
+              <tr>
                 <td>Team Bust</td>
+                <td>1</td>
                 <td>0</td>
                 <td>0</td>
+                <td>1</td>
                 <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td>0.41</td>
               </tr>
               <tr>
                 <td>Team Bellas</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>Team Eyes</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
@@ -167,13 +167,22 @@
             </thead>
             <tbody>
               <tr>
+                <td>Team Red Heads</td>
+                <td>1</td>
+                <td>1</td>
+                <td>0</td>
+                <td>0</td>
+                <td>3</td>
+                <td>0.49</td>
+              </tr>
+              <tr>
                 <td>Team Marvel</td>
+                <td>1</td>
                 <td>0</td>
                 <td>0</td>
+                <td>1</td>
                 <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td>0.51</td>
               </tr>
               <tr>
                 <td>Team Nose Job</td>
@@ -186,15 +195,6 @@
               </tr>
               <tr>
                 <td>Team Victoria's Secret Angels</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>Team Red Heads</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
@@ -232,13 +232,22 @@
             </thead>
             <tbody>
               <tr>
+                <td>Team Petite</td>
+                <td>1</td>
+                <td>1</td>
+                <td>0</td>
+                <td>0</td>
+                <td>3</td>
+                <td>0.59</td>
+              </tr>
+              <tr>
                 <td>Team Baby Face</td>
+                <td>1</td>
                 <td>0</td>
                 <td>0</td>
+                <td>1</td>
                 <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td>0.41</td>
               </tr>
               <tr>
                 <td>Team Supernatural</td>
@@ -251,15 +260,6 @@
               </tr>
               <tr>
                 <td>Team Blonde</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>Team Petite</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
@@ -295,13 +295,22 @@
             </thead>
             <tbody>
               <tr>
-                <td>Bond Girls</td>
+                <td>Team Bond Girls</td>
+                <td>1</td>
+                <td>1</td>
                 <td>0</td>
                 <td>0</td>
+                <td>3</td>
+                <td>0.60</td>
+              </tr>
+              <tr>
+                <td>Team Scott Pilgrim v the World</td>
+                <td>1</td>
                 <td>0</td>
                 <td>0</td>
+                <td>1</td>
                 <td>0</td>
-                <td>0</td>
+                <td>0.40</td>
               </tr>
               <tr>
                 <td>Team Diane</td>
@@ -314,15 +323,6 @@
               </tr>
               <tr>
                 <td>Team Curves</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>Team Scott Pilgrim v the World</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
