--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -115,25 +115,25 @@
                             <tr>
                                 <td>2</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bellas vs Pop Princesses</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rvu4zs" target="_blank">Team Bellas vs Pop Princesses</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>2</td>
                                 <td>B</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Nose Job vs Team Victoria's Secret Angels</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rvu4zs" target="_blank">Team Nose Job vs Team Victoria's Secret Angels</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>2</td>
                                 <td>C</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Supernatural vs Team Blonde</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rvu4zs" target="_blank">Team Supernatural vs Team Blonde</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>2</td>
                                 <td>D</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Diane vs Team Curves</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rvu4zs" target="_blank">Team Diane vs Team Curves</a></td>
                                 <td></td>
                             </tr>
                             <tr>
