--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -92,25 +92,25 @@
                                 <td>1</td>
                                 <td>A</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rtodho" target="_blank">Team Bust vs Team Eyes</a></td>
-                                <td></td>
+                                <td>Team Eyes [2-1]</td>
                             </tr>
                             <tr>
                                 <td>1</td>
                                 <td>B</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rtodho" target="_blank">Team Marvel vs Team Red Heads</a></td>
-                                <td></td>
+                                <td>Team Red Heads [2-1]</td>
                             </tr>
                             <tr>
                                 <td>1</td>
                                 <td>C</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rtodho" target="_blank">Team Baby Face vs Team Petite</a></td>
-                                <td></td>
+                                <td>Team Petite [2-1]</td>
                             </tr>
                             <tr>
                                 <td>1</td>
                                 <td>D</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rtodho" target="_blank">Team Bond Girls vs Team Scott Pilgrim v the World</a></td>
-                                <td></td>
+                                <td>Team Bond Girls [2-1]</td>
                             </tr>
                             <tr>
                                 <td>2</td>
