--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -116,48 +116,48 @@
                                 <td>2</td>
                                 <td>A</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rvu4zs" target="_blank">Team Bellas vs Pop Princesses</a></td>
-                                <td></td>
+                                <td>Pop Princesses [2-1]</td>
                             </tr>
                             <tr>
                                 <td>2</td>
                                 <td>B</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rvu4zs" target="_blank">Team Nose Job vs Team Victoria's Secret Angels</a></td>
-                                <td></td>
+                                <td>Team Victoria's Secret Angels [2-1]</td>
                             </tr>
                             <tr>
                                 <td>2</td>
                                 <td>C</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rvu4zs" target="_blank">Team Supernatural vs Team Blonde</a></td>
-                                <td></td>
+                                <td>Team Blonde [2-1]</td>
                             </tr>
                             <tr>
                                 <td>2</td>
                                 <td>D</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/rvu4zs" target="_blank">Team Diane vs Team Curves</a></td>
-                                <td></td>
+                                <td>Team Diane [2-1]</td>
                             </tr>
                             <tr>
                                 <td>3</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Eyes vs Pop Princesses</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/ryylvx" target="_blank">Team Eyes vs Pop Princesses</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>3</td>
                                 <td>B</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Victoria's Secret Angels vs Team Red Heads</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/ryylvx" target="_blank">Team Victoria's Secret Angels vs Team Red Heads</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>3</td>
                                 <td>C</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Blonde vs Team Petite</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/ryylvx" target="_blank">Team Blonde vs Team Petite</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>3</td>
                                 <td>D</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Curves vs Team Scott Pilgrim v the World</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/ryylvx" target="_blank">Team Curves vs Team Scott Pilgrim v the World</a></td>
                                 <td></td>
                             </tr>
                             <tr>
