--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -140,48 +140,48 @@
                                 <td>3</td>
                                 <td>A</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/ryylvx" target="_blank">Team Eyes vs Pop Princesses</a></td>
-                                <td></td>
+                                <td>Pop Princesses [2-1]</td>
                             </tr>
                             <tr>
                                 <td>3</td>
                                 <td>B</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/ryylvx" target="_blank">Team Victoria's Secret Angels vs Team Red Heads</a></td>
-                                <td></td>
+                                <td>Team Red Heads [2-1]</td>
                             </tr>
                             <tr>
                                 <td>3</td>
                                 <td>C</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/ryylvx" target="_blank">Team Blonde vs Team Petite</a></td>
-                                <td></td>
+                                <td>Team Petite [2-1]</td>
                             </tr>
                             <tr>
                                 <td>3</td>
                                 <td>D</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/ryylvx" target="_blank">Team Curves vs Team Scott Pilgrim v the World</a></td>
-                                <td></td>
+                                <td>Team Scott Pligrim v the World [3-0]</td>
                             </tr>
                             <tr>
                                 <td>4</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bust vs Team WWE</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s1cyax" target="_blank">Team Bust vs Team WWE</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>4</td>
                                 <td>B</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Marvel vs Team Mutants</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s1cyax" target="_blank">Team Marvel vs Team Mutants</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>4</td>
                                 <td>C</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Baby Face vs Team GoT</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s1cyax" target="_blank">Team Baby Face vs Team GoT</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>4</td>
                                 <td>D</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bond Girls vs Team Emma</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s1cyax" target="_blank">Team Bond Girls vs Team Emma</a></td>
                                 <td></td>
                             </tr>
                             <tr>
