--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -164,48 +164,48 @@
                                 <td>4</td>
                                 <td>A</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s1cyax" target="_blank">Team Bust vs Team WWE</a></td>
-                                <td></td>
+                                <td>Team Bust [3-0]</td>
                             </tr>
                             <tr>
                                 <td>4</td>
                                 <td>B</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s1cyax" target="_blank">Team Marvel vs Team Mutants</a></td>
-                                <td></td>
+                                <td>Team Marvel [2-1]</td>
                             </tr>
                             <tr>
                                 <td>4</td>
                                 <td>C</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s1cyax" target="_blank">Team Baby Face vs Team GoT</a></td>
-                                <td></td>
+                                <td>Team GoT [2-1]</td>
                             </tr>
                             <tr>
                                 <td>4</td>
                                 <td>D</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s1cyax" target="_blank">Team Bond Girls vs Team Emma</a></td>
-                                <td></td>
+                                <td>Team Bond Girls [2-1]</td>
                             </tr>
                             <tr>
                                 <td>5</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bellas vs Team WWE</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s4ipne" target="_blank">Team Bellas vs Team WWE</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>5</td>
                                 <td>B</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Nose Job vs Team Mutants</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s4ipne" target="_blank">Team Nose Job vs Team Mutants</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>5</td>
                                 <td>C</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Supernatural vs Team GoT</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s4ipne" target="_blank">Team Supernatural vs Team GoT</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>5</td>
                                 <td>D</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Diane vs Team Emma</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s4ipne" target="_blank">Team Diane vs Team Emma</a></td>
                                 <td></td>
                             </tr>
                             <tr>
