--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -188,48 +188,48 @@
                                 <td>5</td>
                                 <td>A</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s4ipne" target="_blank">Team Bellas vs Team WWE</a></td>
-                                <td></td>
+                                <td>Team Bellas [3-0]</td>
                             </tr>
                             <tr>
                                 <td>5</td>
                                 <td>B</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s4ipne" target="_blank">Team Nose Job vs Team Mutants</a></td>
-                                <td></td>
+                                <td>Team Mutants [2-1]</td>
                             </tr>
                             <tr>
                                 <td>5</td>
                                 <td>C</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s4ipne" target="_blank">Team Supernatural vs Team GoT</a></td>
-                                <td></td>
+                                <td>Team GoT [3-0]</td>
                             </tr>
                             <tr>
                                 <td>5</td>
                                 <td>D</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/s4ipne" target="_blank">Team Diane vs Team Emma</a></td>
-                                <td></td>
+                                <td>Team Emma [3-0]</td>
                             </tr>
                             <tr>
                                 <td>6</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bellas vs Team Eyes</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sa3ewh" target="_blank">Team Bellas vs Team Eyes</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>6</td>
                                 <td>B</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Marvel vs Team Victoria's Secret Angels</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sa3ewh" target="_blank">Team Marvel vs Team Victoria's Secret Angels</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>6</td>
                                 <td>C</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Baby Face vs Team Blonde</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sa3ewh" target="_blank">Team Baby Face vs Team Blonde</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>6</td>
                                 <td>D</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bond Girls vs Team Curves</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sa3ewh" target="_blank">Team Bond Girls vs Team Curves</a></td>
                                 <td></td>
                             </tr>
                             <tr>
