--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -212,48 +212,48 @@
                                 <td>6</td>
                                 <td>A</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sa3ewh" target="_blank">Team Bellas vs Team Eyes</a></td>
-                                <td></td>
+                                <td>Team Bellas [2-1]</td>
                             </tr>
                             <tr>
                                 <td>6</td>
                                 <td>B</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sa3ewh" target="_blank">Team Marvel vs Team Victoria's Secret Angels</a></td>
-                                <td></td>
+                                <td>Team Marvel [2-1]</td>
                             </tr>
                             <tr>
                                 <td>6</td>
                                 <td>C</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sa3ewh" target="_blank">Team Baby Face vs Team Blonde</a></td>
-                                <td></td>
+                                <td>Team Baby Face [2-1]</td>
                             </tr>
                             <tr>
                                 <td>6</td>
                                 <td>D</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sa3ewh" target="_blank">Team Bond Girls vs Team Curves</a></td>
-                                <td></td>
+                                <td>Team Bond Girls [3-0]</td>
                             </tr>
                             <tr>
                                 <td>7</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Pop Princesses vs Team WWE</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sbndc9" target="_blank">Pop Princesses vs Team WWE</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>7</td>
                                 <td>B</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Red Heads vs Team Mutants</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sbndc9" target="_blank">Team Red Heads vs Team Mutants</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>7</td>
                                 <td>C</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Petite vs Team GoT</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sbndc9" target="_blank">Team Petite vs Team GoT</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>7</td>
                                 <td>D</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Scott Pilgrim v the World vs Team Emma</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sbndc9" target="_blank">Team Scott Pilgrim v the World vs Team Emma</a></td>
                                 <td></td>
                             </tr>
                             <tr>
