--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -236,48 +236,48 @@
                                 <td>7</td>
                                 <td>A</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sbndc9" target="_blank">Pop Princesses vs Team WWE</a></td>
-                                <td></td>
+                                <td>Pop Princesses [3-0]</td>
                             </tr>
                             <tr>
                                 <td>7</td>
                                 <td>B</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sbndc9" target="_blank">Team Red Heads vs Team Mutants</a></td>
-                                <td></td>
+                                <td>Team Red Heads [2-1]</td>
                             </tr>
                             <tr>
                                 <td>7</td>
                                 <td>C</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sbndc9" target="_blank">Team Petite vs Team GoT</a></td>
-                                <td></td>
+                                <td>Team Petite [2-1]</td>
                             </tr>
                             <tr>
                                 <td>7</td>
                                 <td>D</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sbndc9" target="_blank">Team Scott Pilgrim v the World vs Team Emma</a></td>
-                                <td></td>
+                                <td>Team Emma [2-1]</td>
                             </tr>
                             <tr>
                                 <td>8</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bust vs Pop Princesses</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/se2qgg" target="_blank">Team Bust vs Pop Princesses</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>8</td>
                                 <td>B</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Nose Job vs Team Red Heads</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/se2qgg" target="_blank">Team Nose Job vs Team Red Heads</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>8</td>
                                 <td>C</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Supernatural vs Team Petite</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/se2qgg" target="_blank">Team Supernatural vs Team Petite</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>8</td>
                                 <td>D</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Diane vs Team Scott Pilgrim v the World</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/se2qgg" target="_blank">Team Diane vs Team Scott Pilgrim v the World</a></td>
                                 <td></td>
                             </tr>
                             <tr>
