--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -260,48 +260,47 @@
                                 <td>8</td>
                                 <td>A</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/se2qgg" target="_blank">Team Bust vs Pop Princesses</a></td>
-                                <td></td>
-                            </tr>
+                                <td>Pop Princesses [3-0]
                             <tr>
                                 <td>8</td>
                                 <td>B</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/se2qgg" target="_blank">Team Nose Job vs Team Red Heads</a></td>
-                                <td></td>
+                                <td>Team Red Heads [2-1]</td>
                             </tr>
                             <tr>
                                 <td>8</td>
                                 <td>C</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/se2qgg" target="_blank">Team Supernatural vs Team Petite</a></td>
-                                <td></td>
+                                <td>Team Petite [3-0]</td>
                             </tr>
                             <tr>
                                 <td>8</td>
                                 <td>D</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/se2qgg" target="_blank">Team Diane vs Team Scott Pilgrim v the World</a></td>
-                                <td></td>
+                                <td>Team Scott Pilgrim [3-0]</td>
                             </tr>
                             <tr>
                                 <td>9</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Eyes vs Team WWE</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sl220c" target="_blank">Team Eyes vs Team WWE</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>9</td>
                                 <td>B</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Victoria's Secret Angels vs Team Mutants</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sl220c" target="_blank">Team Victoria's Secret Angels vs Team Mutants</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>9</td>
                                 <td>C</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Blonde vs Team GoT</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sl220c" target="_blank">Team Blonde vs Team GoT</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>9</td>
                                 <td>D</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Curves vs Team Emma</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sl220c" target="_blank">Team Curves vs Team Emma</a></td>
                                 <td></td>
                             </tr>
                             <tr>
