--- a/tournaments/teambattles/group.html
+++ b/tournaments/teambattles/group.html
@@ -283,48 +283,48 @@
                                 <td>9</td>
                                 <td>A</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sl220c" target="_blank">Team Eyes vs Team WWE</a></td>
-                                <td></td>
+                                <td>Team Eyes [2-1]</td>
                             </tr>
                             <tr>
                                 <td>9</td>
                                 <td>B</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sl220c" target="_blank">Team Victoria's Secret Angels vs Team Mutants</a></td>
-                                <td></td>
+                                <td>Team Victoria's Secret Angels [2-1]</td>
                             </tr>
                             <tr>
                                 <td>9</td>
                                 <td>C</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sl220c" target="_blank">Team Blonde vs Team GoT</a></td>
-                                <td></td>
+                                <td>Team Blonde [2-1]</td>
                             </tr>
                             <tr>
                                 <td>9</td>
                                 <td>D</td>
                                 <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sl220c" target="_blank">Team Curves vs Team Emma</a></td>
-                                <td></td>
+                                <td>Team Emma [2-1]</td>
                             </tr>
                             <tr>
                                 <td>10</td>
                                 <td>A</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bust vs Team Bellas</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sr31qd" target="_blank">Team Bust vs Team Bellas</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>10</td>
                                 <td>B</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Marvel vs Team Nose Job</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sr31qd" target="_blank">Team Marvel vs Team Nose Job</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>10</td>
                                 <td>C</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Baby Face vs Team Supernatural</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sr31qd" target="_blank">Team Baby Face vs Team Supernatural</a></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>10</td>
                                 <td>D</td>
-                                <td><a class="info-link" href="javascript:void(0)" style="text-decoration: none; color: white;">Team Bond Girls vs Team Diane</a></td>
+                                <td><a class="info-link" href="https://www.reddit.com/r/CelebBattles/comments/sr31qd" target="_blank">Team Bond Girls vs Team Diane</a></td>
                                 <td></td>
                             </tr>
                         </tbody>
